tests/baselines/reference/parserModuleDeclaration2.d.errors.txt
parserModuleDeclaration2.d.ts(1,1): error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.


==== parserModuleDeclaration2.d.ts (1 errors) ====
    module M {
    ~~~~~~
!!! error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
    }